--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Git Test</title>
+    <title>Gradient Player</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
-    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
-<body>
+<body id='gradient'>
+    <h1>Background Generator</h1>
+    <input id='color1' type="color" name="color1" value="#00ff00">
+    <input id='color2' type="color" name="color1" value="#ff0000">
+    <h2>Current CSS Background</h2>
+    <h3></h3>
     
+    <script src="main.js"></script>
 </body>
 </html>
